# omegaconf-argparse

./: README.md  pyproject.toml
example/: config.yaml  mnist.py
omegacli/: __init__.py
